fix home docs page button on mobile & tablet

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -245,7 +245,7 @@ header
 
 #mainNav
   display: none
-  
+
   h5
     color: $blue
     font-weight: normal
@@ -1051,6 +1051,9 @@ dd
 
   a.issue
     margin-left: 0px
+
+.gridPageHome .flyout-button
+  display: none
 
 .feedback--no
   margin-left: 1em
